--- a/index.html
+++ b/index.html
@@ -1,2 +1,8 @@
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.5.1/katex.min.css">
+<script src="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.5.1/katex.min.js"></script>
 <h1>My new website</h1>
+<h2>katex</h2>
+katex.render("c = \\pm\\sqrt{a^2 + b^2}", element);
+<h2>markdown</h2>
+On firefox, I installed Markdown Viewer.
 <a href="next.md">markdown attempt</a>
