--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.5.1/katex.min.js"></script>
 <h1>My new website</h1>
 <h2>katex</h2>
+<script>
 katex.render("c = \\pm\\sqrt{a^2 + b^2}", element);
+</script>
 <h2>markdown</h2>
 On firefox, I installed Markdown Viewer.
 <a href="next.md">markdown attempt</a>
